[package]
name = "hunter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.14", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.6.0"

[dev-dependencies]
cargo-make = "0.36.1"
