[package]
name = "dexhunter"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://lifthrasiir.github.io/rustlog/why-is-a-rust-executable-large.html
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
clap = { version = "4.0.14", features = ["derive"] }
lazy_static = "1.4.0"
nix = "0.26.2"
regex = "1.6.0"

[dev-dependencies]
cargo-make = "0.36.1"
